# chat-pdf

./: .gitignore  README.md  main.py  pyproject.toml
src/pages/: chat_page.py
src/utils/chat_functionality/: chat_state.py  retrieval_augmented_generation.py
src/utils/file_managment/: load_n_split.py
src/utils/user_interface/: chat_page_ui.py  main_page_ui.py  pages_common_ui.py
tests/: test_load_n_split.py
